<resources>
    <string name="app_name">Bonfire Adventures</string>

    <string name="name_hint">Enter Name</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="signin_button_txt">Sign In</string>
    <string name="default_error_msg">Error Message</string>
    <string name="sms_code">SMS Verification code</string>
    <string name="verify">Verify</string>

    <!-- PROMPTS-->
    <string name="input_all_fields">Please input data in all fields</string>
    <string name="error_occured">Error Occurred</string>
    <string name="error_occured_message">Sorry, an unknown error occurred, please try again later</string>
    <string name="error_invalid_credentials">Error Invalid Credentials</string>
    <string name="error_invalid_credentials_message">Sorry, the credentials provided were not valid Please try again</string>
    <string name="error_request_many">Error Too Many Request</string>
    <string name="error_request_many_message">Sorry, too many request currently, wait a while and try again later</string>
    <string name="error_no_valid_verifyNumber">Sorry, Please enter a verification or exit</string>
    <string name="error_invalid_verify_input">Sorry, It appears wrong verification code provided, or a network issue, please restart application and retry</string>


    <!-- UNIVERSAL -->
    <string name="ok">Okay</string>
    <string name="exit">Exit</string>
</resources>
